--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"id":15,"manager_url":"http://bwg.auxxs.com","repo_url":"","username":"","password":"","age":1800,"keep_alive":true,"labels":"{\"type\":\"github\"}","remark":"","create_time":"2020-09-12T23:38:06.295521Z","update_time":"2020-09-14T15:10:23.195107299+08:00"}
+{"id":2014,"manager_url":"http://45.77.123.89","repo_url":"","username":"","password":"","age":1800,"keep_alive":true,"labels":"{\"type\":\"github\"}","remark":"","create_time":"2020-09-18T12:53:45.858614Z","update_time":"2020-09-18T12:55:06.213047674+08:00"}
