--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"id":2014,"manager_url":"http://149.28.98.18","repo_url":"","username":"","password":"","age":1800,"keep_alive":true,"labels":"{\"type\":\"github\"}","remark":"","create_time":"2020-09-18T22:11:35.45145Z","update_time":"2020-09-18T23:44:29.042160812+08:00"}
+{"id":15,"manager_url":"http://bwg.auxxs.com","repo_url":"","username":"","password":"","age":1800,"keep_alive":true,"labels":"{\"type\":\"github\"}","remark":"","create_time":"2020-09-12T23:38:06.295521Z","update_time":"2020-09-19T20:30:39.726216119+08:00"}
