--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"id":79,"manager_url":"http://bwg.auxxs.com","repo_url":"","username":"","password":"","age":1800,"keep_alive":true,"labels":"{\"type\":\"github\"}","remark":"","create_time":"2020-11-05T12:59:06.8481Z","update_time":"2020-11-05T13:01:56.973196281Z"}
+{"id":2042,"manager_url":"http://45.63.53.100","repo_url":"","username":"","password":"","age":1800,"keep_alive":true,"labels":"{\"type\":\"github\"}","remark":"","create_time":"2020-11-05T13:23:59.492753Z","update_time":"2020-11-05T13:27:07.579119564Z"}
