--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"id":2042,"manager_url":"http://45.63.53.100","repo_url":"","username":"","password":"","age":1800,"keep_alive":true,"labels":"{\"type\":\"github\"}","remark":"","create_time":"2020-11-06T02:58:40.897015Z","update_time":"2020-11-06T05:33:16.016429228Z"}
+{"id":79,"manager_url":"http://bwg.auxxs.com","repo_url":"","username":"","password":"","age":1800,"keep_alive":true,"labels":"{\"type\":\"github\"}","remark":"","create_time":"2020-11-05T12:59:06.8481Z","update_time":"2020-11-09T07:29:58.763606116Z"}
