--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"id":2042,"manager_url":"http://45.63.53.100","repo_url":"","username":"","password":"","age":1800,"keep_alive":true,"labels":"{\"type\":\"github\"}","remark":"","create_time":"2020-11-09T08:19:04.424664Z","update_time":"2020-11-10T01:25:06.715709682Z"}
+{"id":123,"manager_url":"http://bwg.auxxs.com","repo_url":"","username":"","password":"","age":1800,"keep_alive":true,"labels":"{\"type\":\"github\"}","remark":"","create_time":"2020-11-09T07:47:31.209457Z","update_time":"2020-11-30T16:18:26.487258384+08:00"}
